tests/snapshots/diagnostic_tests__ui@inference_failure.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = arrayOfZeros(50)\n}\n"
input_file: tests/inputs/diagnostics/inference_failure.au
---
Error: Could not infer type
   ╭─[ inference_failure:2:10 ]
   │
 2 │     let a = arrayOfZeros(50)
   │             ────────┬───────  
   │                     ╰───────── Could not infer the type of this expresssion
   │ 
   │ Help: Try annotating the expression: `let val: ExpectedType = ...`
───╯
