tests/snapshots/diagnostic_tests__ui@inference_failure_nested_array_calls.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = arrayGet(arrayOfZeros(50), 25)\n}\n"
input_file: tests/inputs/diagnostics/inference_failure_nested_array_calls.au
---
Error: Could not infer type
   ╭─[ inference_failure_nested_array_calls:2:19 ]
   │
 2 │     let a = arrayGet(arrayOfZeros(50), 25)
   │                      ────────┬───────  
   │                              ╰───────── Could not infer the type of this expresssion
   │ 
   │ Help: Try annotating the expression: `let val: ExpectedType = ...`
───╯
