tests/snapshots/diagnostic_tests__ui@invalid_cast.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = print(\"Unit\")\n\tlet b: I32 = cast(a)\n\tprint(b)\n}\n"
input_file: tests/inputs/diagnostics/invalid_cast.au
---
Error: Invalid cast
   ╭─[ invalid_cast:3:15 ]
   │
 3 │     let b: I32 = cast(a)
   │                  ───┬───  
   │                     ╰───── Can not cast from `()` to `I32`
───╯
