tests/snapshots/diagnostic_tests__ui@invalid_type_not.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = not 5\n\tprint(a)\n}\n"
input_file: tests/inputs/diagnostics/invalid_type_not.au
---
Error: Type mismatch
   ╭─[ main:2:14 ]
   │
 2 │     let a = not 5
   │                 ┬  
   │                 ╰── Expected `Bool`, but got `Number`
───╯
