tests/snapshots/diagnostic_tests__ui@invalid_type_while.au.snap
---
source: tests/diagnostic_tests.rs
expression: "\nfn main() {\n\twhile 5 {\n\t\t\n\t}\n}\n"
input_file: tests/inputs/diagnostics/invalid_type_while.au
---
Error: Type mismatch
   ╭─[ main:3:8 ]
   │
 3 │     while 5 {
   │           ─┬  
   │            ╰── Expected `Bool`, but got `Number`
───╯
