tests/snapshots/diagnostic_tests__ui@missing_fields.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a: {a: I32, b: I64, c: String} = {a: 50}\n\tprint(a)\n}\n"
input_file: tests/inputs/diagnostics/missing_fields.au
---
Error: Missing fields
   ╭─[ main:2:39 ]
   │
 2 │     let a: {a: I32, b: I64, c: String} = {a: 50}
   │                                          ───┬───  
   │                                             ╰───── Missing fields: `b` and `c`
───╯

Error: Type mismatch
   ╭─[ main:2:39 ]
   │
 2 │     let a: {a: I32, b: I64, c: String} = {a: 50}
   │                                          ───┬───  
   │                                             ╰───── Expected `{ a: I32, b: I64, c: String }`, but got `{ a: 50 }`
───╯
